# ros_vision

./: .gitignore
src/gp7_vision_pipeline/: CMakeLists.txt  README.md  TASK.md  calibration_points.csv  package.xml  setup.py
src/gp7_vision_pipeline/config/: pixel_to_base_homography.yaml  vision_markers.yaml  yolo_box_detector.yaml
src/gp7_vision_pipeline/gp7_vision_pipeline/: compute_pixel_to_base_homography.py  detection_visualizer.py  pixel_to_base_mapper_node.py  test_pixel_to_base_homography.py  vision_detection_marker_node.py  yolo_box_detector_node.py
src/gp7_vision_pipeline/gp7_vision_pipeline/nodes/: __init__.py
src/gp7_vision_pipeline/gp7_vision_pipeline/utils/: __init__.py
src/gp7_vision_pipeline/launch/: vision_full_pipeline.launch.py  vision_markers_only.launch.py  vision_no_camera.launch.py
src/gp7_vision_pipeline/legacy/: README.md
src/gp7_vision_pipeline/legacy/config/: camera_extrinsics.yaml  camera_projection.yaml
src/gp7_vision_pipeline/legacy/gp7_vision_pipeline/: camera_projection_node.py  compute_camera_extrinsics.py  target_marker_node.py  test_camera_extrinsics.py  vision_marker_adapter_node.py
src/gp7_vision_pipeline/legacy/launch/: camera_projection.launch.py
src/gp7_vision_pipeline/legacy/scripts/: camera_projection_node  target_marker_node  vision_marker_adapter_node
src/gp7_vision_pipeline/legacy/scripts/tools/: compute_camera_extrinsics  test_camera_extrinsics
src/gp7_vision_pipeline/legacy/srv/: GetPixelPose.srv
src/gp7_vision_pipeline/msg/: BoxDetection.msg
src/gp7_vision_pipeline/scripts/: pixel_to_base_mapper_node  vision_detection_marker_node
src/gp7_vision_pipeline/scripts/tools/: compute_pixel_to_base_homography  test_pixel_to_base_homography
src/robot_vision_pipeline/: CMakeLists.txt  README.md  README_old.md  package.xml  setup.cfg  setup.py
src/robot_vision_pipeline/config/: aruco_detect.yaml  pixel_to_base_mapper.yaml  rs_camera.yaml  rs_camera_yolo.yaml  vision_markers.yaml  yolo_detect_real.yaml  yolo_json_adapter.yaml
src/robot_vision_pipeline/launch/: aruco_detect.launch.py  vision_full_pipeline.launch.py  vision_image_test.launch.py  yolo_detect_real.launch.py  yolo_detect_sim.launch.py
src/robot_vision_pipeline/msg/: ArucoPose.msg  ArucoPoseArray.msg  Box.msg
src/robot_vision_pipeline/robot_vision_pipeline/: compute_pixel_to_base_homography.py  debug.txt  depth_utils.py  detection_visualizer.py  pixel_to_base_mapper_node.py  static_image_camera_node.py  test_pixel_to_base_homography.py  vision_detection_marker_node.py  yolo_json_to_box_detection_node.py
src/robot_vision_pipeline/robot_vision_pipeline/aruco/: aruco_calib_size_check.py  aruco_detect_node.py  aruco_distance.py  aruco_pose_node.py  aruco_size_check.py
src/robot_vision_pipeline/robot_vision_pipeline/pose_estimation/: pixel_to_base_mapper_node.py  vision_detection_marker_node.py
src/robot_vision_pipeline/robot_vision_pipeline/test/: __init__.py  static_image_camera_node.py
src/robot_vision_pipeline/robot_vision_pipeline/vision_gui/: README.md  __init__.py  vision_gui_astra.py  vision_gui_main.py
src/robot_vision_pipeline/robot_vision_pipeline/yolo/: yolo_detect_node.py  yolo_detect_node_v1.py
src/robot_vision_pipeline/scripts/: aruco_detect_node  pixel_to_base_mapper_node  realsense_depth_debug  static_image_camera_node  vision_detection_marker_node  vision_gui  vision_gui_astra  vision_gui_launcher.py  yolo_detect_node  yolo_detect_node_v1  yolo_json_to_box_detection_node
src/robot_vision_pipeline/scripts/tools/: compute_pixel_to_base_homography  test_pixel_to_base_homography
src/robot_vision_pipeline_msgs/: CMakeLists.txt  README.md  package.xml
src/robot_vision_pipeline_msgs/msg/: ArucoPoseArray.msg  Box.msg  BoxArray.msg  BoxDetection.msg  Object.msg  ObjectArray.msg  ObjectDetection.msg  Wood.msg  WoodArray.msg
